# cx_Freeze

./: .bumpversion.cfg  .coverage  .flake8  .gitignore  .gitmodules  .hgeol  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Common.c  Console.c  ConsoleKeepPath.c  FreezePython.py  Freezer.py  HISTORY.txt  LICENSE.md  LICENSE.txt  MANIFEST  MANIFEST.in  MakeFrozenBases.py  Makefile  ModuleFinder.py  PKG-INFO  Pipfile  README.md  README.txt  Win32GUI.c  cxfreeze-postinstall  cxfreeze-quickstart  data.json  dev-requirements.txt  endpoint.json  index.html  latest.html  pyproject.toml  release.py  requirements-dev.txt  (+5 more)
.github/: FUNDING.yml  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  issue-report.md
.github/workflows/: build-wheel.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  pre-commit.yml  publish.yml  scorecards.yml  tests.yml  wheel-builder.yml
ci/: _platform.py  build-docs.sh  build-manylinux-test-one.sh  build-manylinux-tests.sh  build-test-one.sh  build-test.json  build-test.sh  build-utils.sh  build-wheel.sh  build_run.py  build_test.py  bump-version.sh  install-tools.sh  install-uv.sh  license.py  manylinux-build-wheel.sh  manylinux-create.sh  manylinux-shared.sh  pythoncapi.sh  requirements.py  screencapture.bat  screencapture.wine.bat  screencapture.wine.sh  test-manylinux-one.sh
cx_Freeze/: __init__.py  __main__.py  _bytecode.py  _compat.py  _importlib.py  _license.py  _metadata.py  _packaging.py  _pyproject.py  _typing.py  cli.py  common.py  constantesmodule.py  darwintools.py  darwintools2.py  dep_parser.py  dist.py  exception.py  executable.py  filetracker.py  finder.py  freezer.py  freezeutil.py  hooks.py  macdist.py  main.py  module.py  parser.py  patchelf.py  petools.py  sandbox.py  setupwriter.py  util.cp310-win32.pyd  util.cp310-win_amd64.pyd  util.cp311-win32.pyd  util.cp311-win_amd64.pyd  util.cp311-win_arm64.pyd  util.cp312-win32.pyd  util.cp312-win_amd64.pyd  util.cp312-win_arm64.pyd  (+16 more)
cx_Freeze/bases/: README  __init__.py
cx_Freeze/command/: __init__.py  _bdist_msi.py  _pydialog.py  bdist.py  bdist_appimage.py  bdist_deb.py  bdist_dmg.py  bdist_mac.py  bdist_msi.py  bdist_rpm.py  build.py  build_exe.py  install.py  install_exe.py
cx_Freeze/freeze_license/: cx_frozen_license.txt
cx_Freeze/hooks/: __init__.py  _anyio_.py  _asyncio_.py  _av_.py  _backports_.py  _charset_normalizer_.py  _clr_.py  _comtypes_.py  _crypto_.py  _cryptodome_.py  _cv2_.py  _easyocr_.py  _fonttools_.py  _gi_.py  _glib_.py  _importlib_.py  _jaraco_.py  _lazy_loader_.py  _libs.py  _matplotlib_.py  _mkl_.py  _multiprocess_.py  _multiprocessing_.py  _numpy_.py  _nvidia_.py  _ortools_.py  _pandas_.py  _pil_.py  _pkg_resources_.py  _pyarrow_.py  _pycparser_.py  _pydantic_.py  _pygments_.py  _pymupdf_.py  _pyparsing_.py  _pyproj_.py  _pytz_.py  _qthooks.py  _rasterio_.py  _re_.py  (+89 more)
cx_Freeze/icons/: __init__.py
cx_Freeze/initscripts/: Console.py  Console3.py  ConsoleSetLibPath.py  ConsoleSmallApp.py  SharedLib.py  SharedLibSource.py  __init__.py  __startup__.py  console.py  consolesetlibpath.py  frozen_application_license.txt  sharedlib.py  (+1 more)
doc/: Makefile  api.rst  build.py  conf.py  cx_Freeze.html  cx_Freeze.rst  distutils.rst  faq.rst  index.rst  license.rst  make.bat  overview.rst  releasenotes.rst  requirements.txt  script.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0e7a078a6d875882__pydialog_py.html  z_0e7a078a6d875882_bdist_appimage_py.html  z_0e7a078a6d875882_bdist_deb_py.html  z_0e7a078a6d875882_bdist_dmg_py.html  z_0e7a078a6d875882_bdist_mac_py.html  z_0e7a078a6d875882_bdist_msi_py.html  z_0e7a078a6d875882_bdist_rpm_py.html  z_0e7a078a6d875882_build_exe_py.html  z_0e7a078a6d875882_install_exe_py.html  z_0e7a078a6d875882_install_py.html  z_689456c07aa9a9d1___init___py.html  z_689456c07aa9a9d1___main___py.html  z_689456c07aa9a9d1__bytecode_py.html  z_689456c07aa9a9d1__compat_py.html  z_689456c07aa9a9d1__license_py.html  z_689456c07aa9a9d1__metadata_py.html  z_689456c07aa9a9d1__pyproject_py.html  z_689456c07aa9a9d1_cli_py.html  z_689456c07aa9a9d1_common_py.html  z_689456c07aa9a9d1_darwintools_py.html  z_689456c07aa9a9d1_dep_parser_py.html  z_689456c07aa9a9d1_exception_py.html  z_689456c07aa9a9d1_executable_py.html  z_689456c07aa9a9d1_finder_py.html  z_689456c07aa9a9d1_freezer_py.html  z_689456c07aa9a9d1_module_py.html  z_689456c07aa9a9d1_parser_py.html  z_689456c07aa9a9d1_setupwriter_py.html  z_689456c07aa9a9d1_winmsvcr_py.html  z_689456c07aa9a9d1_winmsvcr_repack_py.html  z_689456c07aa9a9d1_winversioninfo_py.html
initscripts/: Console.py  Console3.py  ConsoleKeepPath.py  ConsoleKeepPath3.py  ConsoleSetLibPath.py  SharedLib.py  SharedLibSource.py
samples/build_constants/: hello.py  pyproject.toml  setup.py
samples/msi_binary_data/: hello.py  pyproject.toml  setup.py
samples/pandas/: README.md  pyproject.toml  setup.py  test_pandas.py
samples/pillow/: README.md  pyproject.toml  setup.py  test_pillow.py
samples/pyzmq/: pyproject.toml  pyzmq_client.py  pyzmq_server.py  setup.py
source/: .clang-format  ldd.c  util.c
test/: Readme.md  imports_sample.py  test_finder.py  test_misc.py  test_zip_packages.py
tests/: .coverage  .coveragerc  README.md  Readme.md  __init__.py  conftest.py  datatest.py  generate_samples.py  requirements.txt  test___init__.py  test___main__.py  test_bdist_rpm.py  test_cli.py  test_command_bdist_appimage.py  test_command_bdist_deb.py  test_command_bdist_dmg.py  test_command_bdist_mac.py  test_command_bdist_msi.py  test_command_bdist_rpm.py  test_command_build.py  test_command_build_exe.py  test_command_build_exe_excludes.py  test_command_install.py  test_command_install_exe.py  test_common.py  test_dep_parser.py  test_exception.py  test_executables.py  test_finder.py  test_freezer.py  test_hooks_argon2.py  test_hooks_multiprocess.py  test_hooks_multiprocessing.py  test_hooks_pandas.py  test_hooks_stdlib.py  test_hooks_tkinter.py  test_hooks_zoneinfo.py  test_module.py  test_modulefinder.py  test_multiprocessing.py  (+5 more)
(+596 files in other folders)
