[build-system]
requires = [
    # setuptools 77.0.3+ supports PEP 639
    "setuptools>=77.0.3,<=80.1.0",
    "cx_Logging>=3.1 ;sys_platform == 'win32'",
]
build-backend = "setuptools.build_meta"

[project]
name = "cx_Freeze"
description = "Create standalone executables from Python scripts"
authors = [
    {name = "Anthony Tuininga", email = "anthony.tuininga@gmail.com"},
    {name = "Marcelo Duarte", email = "marcelotduarte@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dependencies = [
    "filelock>=3.12.3",
    "packaging>=24",
    "setuptools>=65.6.3,<=80.1.0",
    "tomli>=2.0.1 ;python_version < '3.11'",
    # Linux
    "patchelf>=0.14 ;sys_platform == 'linux' and platform_machine == 'x86_64'",
    "patchelf>=0.14 ;sys_platform == 'linux' and platform_machine == 'i686'",
    "patchelf>=0.14 ;sys_platform == 'linux' and platform_machine == 'aarch64'",
    "patchelf>=0.14 ;sys_platform == 'linux' and platform_machine == 'armv7l'",
    "patchelf>=0.14 ;sys_platform == 'linux' and platform_machine == 'ppc64le'",
    "patchelf>=0.14 ;sys_platform == 'linux' and platform_machine == 's390x'",
    # macOS
    "dmgbuild>=1.6.1 ;sys_platform == 'darwin'",
    # Windows
    "cabarchive>=0.2.4 ;sys_platform == 'win32'",
    "cx_Logging>=3.1 ;sys_platform == 'win32'",
    "lief>=0.13.2,<=0.16.5 ;sys_platform == 'win32'",
    "striprtf>=0.0.26 ;sys_platform == 'win32'",
]
dynamic = ["version"]
keywords = ["cx-freeze cxfreeze cx_Freeze freeze python"]
license = "PSF-2.0"
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "bump-my-version==1.1.2",
    "cibuildwheel==2.23.3",
    "pre-commit==4.2.0",           # python_version >= 3.9
]
doc = [
    "sphinx==8.2.3 ;python_version >= '3.11'",
    "sphinx-new-tab-link==0.8.0 ;python_version >= '3.11'",
    "sphinx-tabs==3.4.7 ;python_version >= '3.11'",
    "furo==2024.8.6 ;python_version >= '3.11'",
    "myst-parser==4.0.1 ;python_version >= '3.11'",
]
tests = [
    "pytest==8.3.5",
        "pluggy==1.5.0",
    "pytest-cov==6.1.1",
        "coverage==7.8.0",
    "pytest-mock==3.14.0",
    "pytest-timeout==2.3.1",
    "pytest-xdist==3.6.1",
]

[project.entry-points."distutils.setup_keywords"]
executables = "cx_Freeze.executable:validate_executables"

[project.entry-points."setuptools.finalize_distribution_options"]
cxfreeze-plugin = "cx_Freeze:plugin_install"

[project.scripts]
cxfreeze = "cx_Freeze.cli:main"
cxfreeze-quickstart = "cx_Freeze.setupwriter:main"

[project.urls]
Home = "https://marcelotduarte.github.io/cx_Freeze"
Changelog = "https://cx-freeze.readthedocs.io/en/stable/releasenotes.html"
Documentation = "https://cx-freeze.readthedocs.io"
Source = "https://github.com/marcelotduarte/cx_Freeze"
Tracker = "https://github.com/marcelotduarte/cx_Freeze/issues"
Workflows = "https://github.com/marcelotduarte/cx_Freeze/actions?query=branch:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "cx_Freeze.__version__"}

[tool.setuptools.packages]
find = {namespaces = false}

[tool.black]
line-length = 79
target-version = ["py39"]

[tool.bumpversion]
commit = true
current_version = "8.3.0-dev.0"
message = "Bump version: {current_version} → {new_version} [ci skip]"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        \\.(?P<optional>0|[1-9]\\d*)  # pull request number (optional)
    )?
    (?:
        -                             # dash separator for pre-release section
        (?P<pre>[a-zA-Z-]+)\\.        # pre-release label
        (?P<build>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
	"{major}.{minor}.{patch}.{optional}-{pre}.{build}",
	"{major}.{minor}.{patch}-{pre}.{build}",
	"{major}.{minor}.{patch}"
]
sign_tags = true
tag = true
tag_name = "{new_version}"
verbose = true

[[tool.bumpversion.files]]
filename = "cx_Freeze/__init__.py"

[[tool.bumpversion.files]]
filename = "doc/src/conf.py"

[tool.bumpversion.parts.pre]
values = ["dev", "alpha", "rc", "final"]
optional_value = "final"

[tool.cibuildwheel]
before-build = "uv pip install -r pyproject.toml"
build-frontend = "build[uv]"
build-verbosity = 1
enable = ["cpython-freethreading"]
skip = [
    "cp3{9,10,13}-musllinux_*",
    "cp3{9,10,13}-manylinux_ppc64le",
    "cp313t-win*",
]

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64 ppc64le"
before-build = """
cd /opt/_internal && tar -xvf static-libs-for-embedding-only.tar.xz
"""

[tool.cibuildwheel.macos]
archs = "universal2"
repair-wheel-command = """
delocate-wheel --require-archs {delocate_archs} -L bases/lib -w {dest_dir} {wheel}
"""

[tool.coverage.html]
directory = "build/coverage_html_report"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # TYPE_CHECKING block is never executed during pytest run
    "if TYPE_CHECKING:",
]
ignore_errors = true
omit = [
    "*/cx_Freeze/hooks/*",
    "*/cx_Freeze/initscripts/*",
    "*/cx_Freeze/_typing.py",
]
precision = 2

[tool.coverage.paths]
source = [
    "cx_Freeze/",
    "*/cx_Freeze/",
]

[tool.coverage.run]
parallel = true
relative_files = true

[tool.pylint.format]
max-line-length = 79

[tool.pylint.main]
disable = [
    "attribute-defined-outside-init",
    "c-extension-no-member",
    "broad-exception-caught",       # checked by ruff BLE001
    "duplicate-code",
    "exec-used",
    "fixme",                         # also ignored in ruff
    "global-statement",              # checked by ruff PLW0603
    "import-error",
    "missing-class-docstring",       # checked by ruff D101
    "missing-function-docstring",    # checked by ruff D103
    "missing-module-docstring",      # checked by ruff D100
    "no-member",                     # not handled by ruff yet E1101
    "protected-access",              # checked by ruff SLF001
    "redefined-builtin",             # checked by ruff A
    "too-few-public-methods",
    "too-many-arguments",            # also ignored in ruff
    "too-many-branches",             # also ignored in ruff
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-return-statements",    # checked by ruff PLR0911
    "too-many-statements",           # also ignored in ruff
    "unbalanced-tuple-unpacking",    # not handled by ruff yet W0632
    "ungrouped-imports",             # checked by ruff C0412 (I001)
    "unused-argument",               # checked by ruff ARG
    "useless-parent-delegation",     # not handled by ruff yet W0246
]
ignore-paths = [
    "cx_Freeze/__init__.py",
    "cx_Freeze/darwintools.py",
    "cx_Freeze/hooks/__init__.py",
    "cx_Freeze/hooks/_pyqt5_/_resource.py",
    "cx_Freeze/hooks/_pyside2_/_resource.py",
    "cx_Freeze/hooks/_pyside6_/_resource.py",
    "^samples/.*.py$",
    "^tests/.*.py$",
]
jobs = 0
output-format = "colorized"
py-version = [3, 9]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rpfEsXx"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:distutils.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:setuptools.*",
]

[tool.ruff]
extend-exclude = [
    "cx_Freeze/importshed/*.pyi",
    "cx_Freeze/darwintools.py",
]
line-length = 79

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ANN2", # flake8-annotations - missing return type
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E", "W",  # pycodestyle
    "EXE",  # flake8-executable
    "EM",   # flake8-errmsg
    "ERA",  # eradicate
    "F",    # flake8
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "INT",  # flake8-gettext
    "ISC003",  # flake8-implicit-str-concat - explicit-string-concatenation
    "LOG",  # flake8-logging
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PLC", "PLE", "PLR", "PLW",  # pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "Q004", # flake8-quotes - unnecessary-escaped-quote
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T10",  # flake8-debugger
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]
ignore = [
    # ignored for now, but should be revised in future
    # last revised using ruff 0.3.4
    "C901",  # mccabe - {name} is too complex ({complexity} > {max_complexity})
    "D102",  # Missing docstring in public method
    "D401",  # First line of docstring should be in imperative mood
    "FIX",   # flake8-fixme
    "PERF203",# `try`-`except` within a loop incurs performance overhead
    # ignore the following
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    "D203", "D205", "D213",
    "PLR2004",  # magic-value-comparison
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    "PYI021",   # Docstrings should not be included in stubs
    "T20",      # flake8-print
    "TD",       # flake8-todos
    # avoid the rules that may cause conflict with formatter
    "COM812", "COM819",
    "D206", "D300",
    "E111", "E114", "E117", "E501",
    "ISC001", "ISC002",
    "Q000", "Q001", "Q002", "Q003",
    "W191",
    # prone to false positives (https://github.com/astral-sh/ruff/issues/4045)
    "S603",
]
typing-modules = ["cx_Freeze._typing"]

[tool.ruff.lint.per-file-ignores]
"cx_Freeze/command/_pydialog.py" = ["ERA001"]
"cx_Freeze/command/bdist_msi.py" = ["ERA001"]
"cx_Freeze/initscripts/*" = ["S102"]
"samples/*" = ["D1"]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-builtins]
strict-checking = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
