[bdist_wheel]
# wheels should be OS-specific:
# their names must contain macOS/manulinux1/2010/2014/Windows identifiers
universal = 0

[metadata]
name = cx_Freeze
version = 6.7b8
url = https://marcelotduarte.github.io/cx_Freeze
project_urls =
    Bug Tracker = https://github.com/marcelotduarte/cx_Freeze/issues
    CI: GitHub Workflows = https://github.com/marcelotduarte/cx_Freeze/actions?query=branch:main
    Source Code = https://github.com/marcelotduarte/cx_Freeze
description = Create standalone executables from Python scripts
long_description = file: README.md
long_description_content_type = text/markdown
author = Anthony Tuininga
author_email = anthony.tuininga@gmail.com
maintainer = Marcelo Duarte @marcelotduarte
license = Python Software Foundation License
license_files =
    doc/src/license.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Utilities

keywords =
    cx-freeze cxfreeze cx_Freeze freeze python

[options]
python_requires = >=3.6
install_requires =
    cx-logging >= 3.0 ; sys_platform == "win32"
    importlib-metadata >= 4.3.1
zip_safe = False

[options.entry_points]
console_scripts =
    cxfreeze = cx_Freeze.cli:main
    cxfreeze-quickstart = cx_Freeze.setupwriter:main

[pylint]
max-line-length = 79
