[metadata]
name = cx_Freeze
version = attr: cx_Freeze.__version__
description = Create standalone executables from Python scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://marcelotduarte.github.io/cx_Freeze
author = Anthony Tuininga
author_email = anthony.tuininga@gmail.com
maintainer = Marcelo Duarte
maintainer_email = marcelotduarte@users.noreply.github.com
license = Python Software Foundation License
license_file = doc/src/license.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Utilities
keywords =
    cx-freeze cxfreeze cx_Freeze freeze python
project_urls =
    Bug Tracker = https://github.com/marcelotduarte/cx_Freeze/issues
    CI: GitHub Workflows = https://github.com/marcelotduarte/cx_Freeze/actions?query=branch:main
    Source Code = https://github.com/marcelotduarte/cx_Freeze

[options]
# Keep this in sync with requirements.txt
install_requires =
    cx-logging>=3.0 ;sys_platform == "win32"
    importlib-metadata>=4.8.3 ;python_version < "3.10"
    lief>=0.11.5 ;sys_platform == "win32" and python_version < "3.10"
    packaging
    patchelf>=0.12 ;sys_platform == "linux"
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    cxfreeze = cx_Freeze.cli:main
    cxfreeze-quickstart = cx_Freeze.setupwriter:main

[options.extras_require]
# Keep this in sync with requirements.txt
dev =
    bump2version>=1.0.1
    pre-commit>=2.17.0
doc =
    sphinx==4.4.0
test =
    nose==1.3.7
    pygments==2.11.2
    pytest==6.2.5
    pytest-cov==3.0.0
    pytest-mock==3.6.1
    pytest-timeout==1.4.2
all =
    %(dev)s
    %(test)s
    %(doc)s

[bdist_wheel]
universal = 0
