[metadata]
name = cx_Freeze
version = attr: cx_Freeze.__version__
description = Create standalone executables from Python scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://marcelotduarte.github.io/cx_Freeze
author = Anthony Tuininga
author_email = anthony.tuininga@gmail.com
maintainer = Marcelo Duarte
maintainer_email = marcelotduarte@users.noreply.github.com
license = Python Software Foundation License
license_file = doc/src/license.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Python Software Foundation License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Utilities
keywords =
    cx-freeze cxfreeze cx_Freeze freeze python
project_urls =
    Bug Tracker = https://github.com/marcelotduarte/cx_Freeze/issues
    CI: GitHub Workflows = https://github.com/marcelotduarte/cx_Freeze/actions?query=branch:main
    Source Code = https://github.com/marcelotduarte/cx_Freeze

[options]
install_requires =
    packaging>=21.0
    setuptools>=59.0.1,<=60.10.0
    cx-logging>=3.0 ;sys_platform == 'win32' and python_version < '3.10'
    importlib-metadata>=4.8.3 ;python_version < '3.10'
    lief>=0.11.5 ;sys_platform == 'win32'
    patchelf>=0.12 ;sys_platform == 'linux'
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    cxfreeze = cx_Freeze.cli:main
    cxfreeze-quickstart = cx_Freeze.setupwriter:main

[options.extras_require]
dev =
    bump2version>=1.0.1
    pre-commit>=2.17.0
    pylint>=2.13.0
    cibuildwheel==2.6.0 ;sys_platform == 'linux'
doc =
    sphinx==4.5.0
    sphinx-rtd-theme==1.0.0
test =
    nose==1.3.7
    pygments==2.11.2
    pytest>=7.0.1
    pytest-cov==3.0.0
    pytest-mock>=3.6.1
    pytest-timeout>=1.4.2

[bdist_wheel]
universal = 0

[flake8]
exclude =
    .git,
    __pycache__,
    doc/src/conf.py
ignore =
    E203, W503, # Incompatible with black see https://github.com/ambv/black/issues/315
    E266,
inline-quotes = double
