[project]
name = "test_pillow"
version = "0.1.2.3"
dependencies = [
    "pillow<10;python_version < '3.12'",
    "pillow<10.2;python_version == '3.12'",
    "pillow>=10.2;python_version > '3.12'",
]

[tool.cxfreeze]
executables = ["test_pillow.py"]

[tool.cxfreeze.build_exe]
include_files = [["icon.png", "share/icon.png"]]
include_msvcr = true
excludes = ["tkinter", "unittest"]
silent = true
